Fix: gap in user action buttons

--- a/src/pages/components/view/admin/Users/Users.module.scss
+++ b/src/pages/components/view/admin/Users/Users.module.scss
@@ -20,7 +20,7 @@
   }
   &__action{
     display: flex;
-    gap: 10px;;
+    gap: 10px;
   }
  }
 }
